attempting to fix autoplay on mobile

--- a/style.scss
+++ b/style.scss
@@ -195,7 +195,6 @@ header {
   grid-column: 1/5;
   grid-row: 1/3;
   // padding: 2rem;
-  background: url('/img/vegas.jpeg') no-repeat center/cover;
 
   .current-temp-showcase-2 {
     font-size: 1.5rem;
@@ -659,7 +658,8 @@ header {
 
 // you shouldnt have to add media query here
 @media (prefers-color-scheme: light) {
-  .showcase-location {
+  .showcase-location,
+  .temp {
     color: white;
   }
 }
@@ -676,7 +676,7 @@ header {
   }
 
   body {
-    background: #5f6673;
+    background: #6d7e8c;
   }
 
   .fa-moon {
@@ -690,10 +690,6 @@ header {
 
   * {
     color: #b9babd; // !! REFACTOR THIS SELECTOR STORE IN A VARIABLE
-  }
-
-  header {
-    background: url('/img/henderson-night.jpeg') no-repeat center/cover;
   }
 
   .fa-sync-alt {
